=======
CHANGES
=======

------
1.1.2
------

* removed defunct code for filtering in model
* filterColumn method added, can now filter properly from model class

------
1.1.1
------

* changed importdict method to make more efficient for large amounts of data
* added more tests
* fix to autoaddrows
* changes to sort behaviour so that current order is kept when adding/deleting rows
* fix to draw visible multiple row selection only

------
1.1
------

* table now renders large amounts of data by only drawing visible frame
* fixes to filtering bar
* removed paged view
* removed 'name' as a special field
* adding rows from GUI no longer requires rec names
* can now set row header width
* can now show record keys in row header instead of numbers
* row header drawn with same alignment as cells
* renamed most remaining Table.py methods to camel case

------
1.0.3
------

* added new, load and save methods to table directly
* added ImportTable method to table for interactive use
* fixed clicking outside column header bug
* fix to update selected col when redrawing
* added Dialog.py module
* removed simpletabledialog
* tidied up popupmenu

------
1.0.2
------

* restored Filtering.py, filtering works ok
* more improvement to auto resize cols, now checks currrent col sizes
* fixed model.save() method
* added ability to save table, add rows to popup menu
* fixed delete cells button binding
* cell font preferences now uses available fonts from os
* removed unused prefs from dialog

------
1.0.1
------

* add_Column method fixed
* Added ability to align cells left right or center
* Fixed problem of sort order lost when deleting rows
* Sort in descending order works correctly
* Fixes to plotting, but needs reworking or removal
* Added setSelectedCells method so a block of cells can be selected
* Improved text fitting in cells
* Automatic resizing of columns improved

