@@ -32,6 +32,7 @@ CHANGES
 
 * removed defunct code for filtering in model
 * filterColumn method added, can now filter properly from model class
+* changed autoaddrows to make much faster for large number of rows
 
 ------
 1.1.1
